--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Walz Shop - Keranjang Top Up</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body data-page="cart">
@@ -31,7 +31,7 @@
       <a href="game.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
 
       <div class="summary-card fade-in">
-        <h2>Ringkasan Transaksi</h2>
+        <h2 class="summary-card-title">Ringkasan Transaksi</h2>
         <table class="summary-table">
           <tr><td>Game</td><td id="summary-game">-</td></tr>
           <tr><td>User ID</td><td id="summary-user">-</td></tr>
@@ -54,7 +54,34 @@
 
   <footer class="footer">
     <div class="container">
-      <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+      <div class="footer-content">
+        <div class="footer-section about">
+          <a href="#" class="footer-logo">Walz Shop</a>
+          <p>Layanan top-up game termurah dan tercepat untuk semua game favorit Anda.</p>
+        </div>
+        <div class="footer-section links">
+          <h3>Tautan Cepat</h3>
+          <ul>
+            <li><a href="index.html">Beranda</a></li>
+            <li><a href="#">Tentang Kami</a></li>
+            <li><a href="#">Kontak</a></li>
+            <li><a href="#">Kebijakan Privasi</a></li>
+          </ul>
+        </div>
+        <div class="footer-section contact">
+          <h3>Hubungi Kami</h3>
+          <p><i class="fas fa-envelope"></i> admin@walzshop.com</p>
+          <p><i class="fas fa-phone"></i> +62 812-3456-7890</p>
+          <div class="socials">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
+      </div>
     </div>
   </footer>
 
