--- a/cart.html
+++ b/cart.html
@@ -28,7 +28,7 @@
 
   <main class="main">
     <div class="container">
-      <a href="game.html" class="btn-back"><i class="fas fa-arrow-left"></i> Kembali</a>
+      <a href="index.html" class="btn-back" id="back-to-game"><i class="fas fa-arrow-left"></i> Kembali</a>
 
       <div class="summary-card fade-in">
         <h2 class="summary-card-title">Ringkasan Transaksi</h2>
