--- a/cart.html
+++ b/cart.html
@@ -1,90 +1,52 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Walz Shop - Keranjang Top Up</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Konfirmasi Pesanan</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body data-page="cart">
-  <header class="header">
-    <div class="container">
-      <a href="index.html" class="logo">
-        <i class="fas fa-gem logo-icon"></i>
-        <span class="logo-text">Walz Shop</span>
-      </a>
-      <nav class="nav">
-        <a href="index.html" class="nav-item"><i class="fas fa-home"></i> Beranda</a>
-        <a href="#" class="nav-item"><i class="fas fa-info-circle"></i> Tentang</a>
-        <a href="#" class="nav-item"><i class="fas fa-headset"></i> Kontak</a>
-      </nav>
-      <button class="nav-toggle">
-        <i class="fas fa-bars"></i>
-      </button>
-    </div>
-  </header>
 
-  <main class="main">
-    <div class="container">
-      <a href="index.html" class="btn-back" id="back-to-game"><i class="fas fa-arrow-left"></i> Kembali</a>
+    <header>
+        <div class="container flex-row">
+            <a href="index.html" class="logo">
+                <img src="https://i.ibb.co/Ld1752D/Walz-Shop-1.png" alt="Walz Shop Logo">
+            </a>
+            <nav class="nav">
+                <a href="index.html">Beranda</a>
+                <a href="index.html#about">Tentang Kami</a>
+                <a href="index.html#payments">Pembayaran</a>
+            </nav>
+        </div>
+    </header>
 
-      <div class="summary-card fade-in">
-        <h2 class="summary-card-title">Ringkasan Transaksi</h2>
-        <table class="summary-table">
-          <tr><td>Game</td><td id="summary-game">-</td></tr>
-          <tr><td>User ID</td><td id="summary-user">-</td></tr>
-          <tr id="server-row" style="display:none;"><td>Server</td><td id="summary-server">-</td></tr>
-          <tr><td>Produk</td><td id="summary-product">-</td></tr>
-          <tr id="voucher-row" style="display:none;"><td>Diskon Voucher</td><td id="summary-voucher">-</td></tr>
-          <tr><td>Metode Bayar</td><td id="summary-payment">-</td></tr>
-        </table>
-        <div class="soft-divider"></div>
-        <div class="summary-total">
-          <span>Total Pembayaran</span>
-          <span id="summary-total">Rp 0</span>
+    <main class="main">
+        <div class="container">
+            <section class="card summary-box">
+                <h2>Konfirmasi Pesanan</h2>
+                <p>Game: <span id="summary-game" class="info"></span></p>
+                <p>User ID: <span id="summary-user" class="info"></span></p>
+                <p id="server-row" style="display: none;">Server ID: <span id="summary-server" class="info"></span></p>
+                <p>Produk: <span id="summary-product" class="info"></span></p>
+                <p>Metode Pembayaran: <span id="summary-payment" class="info"></span></p>
+                <p id="voucher-row" style="display: none;">Diskon Voucher: <span id="summary-voucher" class="info"></span></p>
+                <h3>Total Pembayaran: <span id="summary-total" class="info"></span></h3>
+                <button id="buy-btn" class="btn btn-confirm">Bayar Sekarang</button>
+                <a id="back-to-game" href="index.html" class="btn btn-secondary" style="margin-top: 10px;">Kembali</a>
+            </section>
         </div>
-        <button type="button" id="buy-btn" class="btn btn-block btn-confirm">
-          <i class="fab fa-whatsapp"></i> Beli via WhatsApp
-        </button>
-      </div>
-    </div>
-  </main>
+    </main>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-content">
-        <div class="footer-section about">
-          <a href="#" class="footer-logo">Walz Shop</a>
-          <p>Layanan top-up game termurah dan tercepat untuk semua game favorit Anda.</p>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Walz Shop. All rights reserved.</p>
         </div>
-        <div class="footer-section links">
-          <h3>Tautan Cepat</h3>
-          <ul>
-            <li><a href="index.html">Beranda</a></li>
-            <li><a href="#">Tentang Kami</a></li>
-            <li><a href="#">Kontak</a></li>
-            <li><a href="#">Kebijakan Privasi</a></li>
-          </ul>
-        </div>
-        <div class="footer-section contact">
-          <h3>Hubungi Kami</h3>
-          <p><i class="fas fa-envelope"></i> admin@walzshop.com</p>
-          <p><i class="fas fa-phone"></i> +62 812-3456-7890</p>
-          <div class="socials">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-whatsapp"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2025 Walz Shop. Semua hak dilindungi.</p>
-      </div>
-    </div>
-  </footer>
+    </footer>
 
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
