--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game Murah</title>
+    <title>Walz Shop - Top Up Game Murah & Cepat</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,20 +27,18 @@
 
     <main class="main">
         <div class="container">
-            <section class="section">
-                <div class="hero">
-                    <h1>Top Up Game Murah & Cepat</h1>
-                    <p>Proses instan, harga termurah, dan jaminan keamanan.</p>
-                </div>
+            <section class="section hero">
+                <h1>Top Up Game Murah & Cepat</h1>
+                <p>Proses instan, harga termurah, dan jaminan keamanan.</p>
             </section>
 
-            <section class="section">
-                <h2>Game Populer</h2>
+            <section class="section games-section">
+                <h2>Pilih Game</h2>
                 <div id="games-grid" class="games-grid">
                     </div>
             </section>
-
-            <section class="section">
+            
+            <section class="section promos-section">
                 <h2>Promo</h2>
                 <div class="promo-slider">
                     <div id="promo-slider" class="slider__wrapper">
@@ -49,20 +47,9 @@
                 </div>
             </section>
 
-            <section class="section card" id="about">
+            <section class="section card about-section" id="about">
                 <h2>Tentang Kami</h2>
                 <p>Walz Shop adalah destinasi top up game andalan Anda. Kami menyediakan berbagai produk game populer dengan harga yang sangat kompetitif. Proses top up di sini sangat mudah, cepat, dan 100% aman. Cukup masukkan ID game Anda, pilih nominal, selesaikan pembayaran, dan produk akan langsung masuk ke akun Anda dalam hitungan detik.</p>
-            </section>
-
-            <section class="section card" id="payments">
-                <h2>Metode Pembayaran</h2>
-                <p>Kami menyediakan berbagai metode pembayaran yang mudah dan aman untuk kenyamanan Anda.</p>
-                <div class="payment-icons">
-                    <img src="https://i.supaimg.com/e4a887fd-41fd-4075-9802-8b65bb52d1cb.jpg" alt="DANA">
-                    <img src="https://i.supaimg.com/104ae434-3bb9-4071-a946-73b301a5ba29.jpg" alt="GoPay">
-                    <img src="https://i.supaimg.com/7b5fe49a-a708-4a05-8b00-9865481e0e13.jpg" alt="QRIS">
-                    <img src="https://i.supaimg.com/20eaef7a-3a63-4be3-a507-175348ab41de.jpg" alt="Krom Bank">
-                </div>
             </section>
         </div>
     </main>
