--- a/index.html
+++ b/index.html
@@ -56,7 +56,31 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Walz Shop. All rights reserved.</p>
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4>Walz Shop</h4>
+                    <p>Layanan top up game terpercaya, cepat, dan aman.</p>
+                    <a href="#" class="social-icon"><img src="https://i.ibb.co/Ld1752D/Walz-Shop-1.png" alt="Logo"></a>
+                </div>
+                <div class="footer-column">
+                    <h4>Navigasi</h4>
+                    <ul>
+                        <li><a href="index.html">Beranda</a></li>
+                        <li><a href="#about">Tentang Kami</a></li>
+                        <li><a href="#payments">Pembayaran</a></li>
+                        <li><a href="#">Syarat & Ketentuan</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Hubungi Kami</h4>
+                    <p>Email: walzshop@gmail.com</p>
+                    <p>WhatsApp: 082298902274</p>
+                    <p>Jam Kerja: 08.00 - 22.00 WIB</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
 
