--- a/cart.html
+++ b/cart.html
@@ -28,21 +28,56 @@
             <section class="card summary-box">
                 <h2>Pembayaran Berhasil!</h2>
                 <div class="success-icon">&#10003;</div>
-                <p>Pesanan Anda telah kami terima dan sedang diproses.</p>
+                <p>Pesanan Anda telah kami terima.</p>
+                
                 <div class="summary-details">
-                    <p>ID Transaksi: <span id="summary-id" class="info">#WL20240906-ABCDE</span></p>
                     <p>Produk: <span id="summary-product" class="info"></span></p>
                     <p>Metode Pembayaran: <span id="summary-payment" class="info"></span></p>
                     <h3>Total Pembayaran: <span id="summary-total" class="info"></span></h3>
                 </div>
-                <a href="index.html" class="btn btn-primary" style="margin-top: 20px;">Kembali ke Beranda</a>
+
+                <div class="payment-guide">
+                    <h4>Langkah Selanjutnya:</h4>
+                    <ol>
+                        <li>Lakukan transfer ke rekening yang telah disediakan.</li>
+                        <li>Tekan tombol di bawah ini untuk mengirim bukti transfer.</li>
+                        <li>Pesanan akan diproses setelah bukti transfer diverifikasi.</li>
+                    </ol>
+                </div>
+
+                <a id="wa-btn" href="#" class="btn btn-whatsapp">Kirim Bukti Transfer</a>
+                <a href="index.html" class="btn btn-primary" style="margin-top: 10px;">Kembali ke Beranda</a>
             </section>
         </div>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Walz Shop. All rights reserved.</p>
+            <div class="footer-columns">
+                <div class="footer-column">
+                    <h4>Walz Shop</h4>
+                    <p>Layanan top up game terpercaya, cepat, dan aman.</p>
+                    <a href="#" class="social-icon"><img src="https://i.ibb.co/Ld1752D/Walz-Shop-1.png" alt="Logo"></a>
+                </div>
+                <div class="footer-column">
+                    <h4>Navigasi</h4>
+                    <ul>
+                        <li><a href="index.html">Beranda</a></li>
+                        <li><a href="#about">Tentang Kami</a></li>
+                        <li><a href="#payments">Pembayaran</a></li>
+                        <li><a href="#">Syarat & Ketentuan</a></li>
+                    </ul>
+                </div>
+                <div class="footer-column">
+                    <h4>Hubungi Kami</h4>
+                    <p>Email: walzshop@gmail.com</p>
+                    <p>WhatsApp: 082298902274</p>
+                    <p>Jam Kerja: 08.00 - 22.00 WIB</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
+            </div>
         </div>
     </footer>
 
