--- a/index.html
+++ b/index.html
@@ -3,87 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Walz Shop - Top Up Game Murah & Cepat</title>
+    <title>Diamonds Store - Top Up Murah</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body data-page="index">
 
-    <header>
-        <div class="container flex-row">
-            <a href="index.html" class="logo">
-                <img src="https://i.ibb.co/Ld1752D/Walz-Shop-1.png" alt="Walz Shop Logo">
-            </a>
-            <button class="nav-toggle" aria-label="Toggle navigation">&#9776;</button>
-            <nav class="nav">
-                <a href="index.html">Beranda</a>
-                <a href="#about">Tentang Kami</a>
-                <a href="#payments">Pembayaran</a>
-            </nav>
-        </div>
+    <header class="header">
+        <a href="index.html" class="logo">💎 Diamonds Store</a>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__item"><a href="index.html" class="nav__link">Beranda</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Cara Beli</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Promo</a></li>
+                <li class="nav__item"><a href="cart.html" class="nav__link">Keranjang</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main class="main">
-        <div class="container">
-            <section class="section hero">
-                <h1>Top Up Game Murah & Cepat</h1>
-                <p>Proses instan, harga termurah, dan jaminan keamanan.</p>
-            </section>
+    <main class="main-content">
+        <section class="promo-section">
+            <div class="slider" id="promo-slider"></div>
+            <div class="slider__dots" id="slider-dots"></div>
+        </section>
 
-            <section class="section games-section">
-                <h2>Pilih Game</h2>
-                <div id="games-grid" class="games-grid">
-                    </div>
-            </section>
-            
-            <section class="section promos-section">
-                <h2>Promo</h2>
-                <div class="promo-slider">
-                    <div id="promo-slider" class="slider__wrapper">
-                        </div>
-                    <div id="slider-dots" class="slider__dots"></div>
+        <section class="games-section">
+            <h2 class="section-title">Pilih Game Anda</h2>
+            <div class="games-grid" id="games-grid">
                 </div>
-            </section>
-
-            <section class="section card about-section" id="about">
-                <h2>Tentang Kami</h2>
-                <p>Walz Shop adalah destinasi top up game andalan Anda. Kami menyediakan berbagai produk game populer dengan harga yang sangat kompetitif. Proses top up di sini sangat mudah, cepat, dan 100% aman. Cukup masukkan ID game Anda, pilih nominal, selesaikan pembayaran, dan produk akan langsung masuk ke akun Anda dalam hitungan detik.</p>
-            </section>
-        </div>
+        </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <div class="footer-columns">
-                <div class="footer-column">
-                    <h4>Walz Shop</h4>
-                    <p>Layanan top up game terpercaya, cepat, dan aman.</p>
-                    <a href="#" class="social-icon"><img src="https://i.ibb.co/Ld1752D/Walz-Shop-1.png" alt="Logo"></a>
-                </div>
-                <div class="footer-column">
-                    <h4>Navigasi</h4>
-                    <ul>
-                        <li><a href="index.html">Beranda</a></li>
-                        <li><a href="#about">Tentang Kami</a></li>
-                        <li><a href="#payments">Pembayaran</a></li>
-                        <li><a href="#">Syarat & Ketentuan</a></li>
-                    </ul>
-                </div>
-                <div class="footer-column">
-                    <h4>Hubungi Kami</h4>
-                    <p>Email: walzshop@gmail.com</p>
-                    <p>WhatsApp: 082298902274</p>
-                    <p>Jam Kerja: 08.00 - 22.00 WIB</p>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2024 Walz Shop. All Rights Reserved.</p>
-            </div>
-        </div>
+    <footer class="footer">
+        <p>&copy; 2024 Diamonds Store. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 </html>
